# parallel-filtering

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  pyproject.toml
parafilter/: entities.py  measurements.py  navigator.py
parafilter/old/: states.py
tests/: test_measurements.py  test_navigator.py
